--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,32 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieApplication"
         tools:targetApi="31">
+
         <activity
             android:name=".ui.mainscreen.MainActivity"
             android:exported="false" />
+
         <activity
             android:name=".ui.mainscreen.MovieDetailActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".ui.mainscreen.notification.MessageDetailActivity"
+            android:exported="false" />
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true">
             <intent-filter>
+
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
+
             </intent-filter>
+
         </activity>
+
     </application>
 
 </manifest>
