--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.5.0"
 core = "10.0.3"
+coreVersion = "1.6.1"
 dagger = "2.28.3"
 daggerCompiler = "2.x"
 firebaseBom = "33.1.1"
@@ -12,9 +13,14 @@ junitVersion = "1.1.5"
 espressoCore = "3.5.1"
 appcompat = "1.7.0"
 kotlinParcelizeRuntime = "1.6.0"
+kotlinxCoroutinesTest = "1.9.0-RC"
 material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
+mockk = "v11311"
+mockkAgent = "1.13.11"
+mockkAndroid = "1.13.11"
+mockkVersion = "1.13.11"
 retrofit = "2.9.0"
 roomRuntime = "2.6.1"
 youtubeAndroidPlayer = "10.0.5"
@@ -27,6 +33,7 @@ uiDesktop = "1.6.8"
 preference = "1.2.0"
 
 [libraries]
+androidx-core = { module = "androidx.test:core", version.ref = "coreVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
@@ -44,9 +51,14 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 kotlin-parcelize-runtime = { module = "org.jetbrains.kotlin:kotlin-parcelize-runtime", version.ref = "kotlinParcelizeRuntime" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
+mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockkAgent" }
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkAndroid" }
+mockk-v11311 = { module = "io.mockk:mockk", version.ref = "mockkVersion" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 youtube-android-player = { module = "com.google.android.youtube:youtube-android-player", version.ref = "youtubeAndroidPlayer" }
 androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
