--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,11 +1,19 @@
 [versions]
 agp = "8.5.0"
+androidxEspressoCore = "3.4.0"
+androidxEspressoCoreVersion = "3.6.1"
+androidxJunit = "1.1.2"
+androidxJunitVersion = "1.1.3"
+androidxTestExtJunit = "1.2.1"
 core = "10.0.3"
+coreTesting = "2.2.0"
 coreVersion = "1.6.1"
 dagger = "2.28.3"
 daggerCompiler = "2.x"
+espressoCoreVersion = "3.3.0"
 firebaseBom = "33.1.1"
 glide = "4.12.0"
+hamcrestLibrary = "x.x.x"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
@@ -17,11 +25,17 @@ kotlinxCoroutinesTest = "1.9.0-RC"
 material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
+mockitoCore = "3.12.4"
+mockitoKotlin = "5.4.0"
 mockk = "v11311"
 mockkAgent = "1.13.11"
 mockkAndroid = "1.13.11"
 mockkVersion = "1.13.11"
+mockwebserver = "4.9.1"
+powermockApiMockito3 = "2.0.9"
+powermockModuleJunit4 = "2.0.9"
 retrofit = "2.9.0"
+robolectric = "4.5.1"
 roomRuntime = "2.6.1"
 youtubeAndroidPlayer = "10.0.5"
 annotation = "1.6.0"
@@ -31,12 +45,24 @@ firebaseAuthKtx = "23.0.0"
 firebaseFirestoreKtx = "25.0.0"
 uiDesktop = "1.6.8"
 preference = "1.2.0"
+junitKtx = "1.2.1"
+testng = "6.9.6"
 
 [libraries]
 androidx-core = { module = "androidx.test:core", version.ref = "coreVersion" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
+androidx-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "androidxEspressoCore" }
+androidx-espresso-core-v330 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
+androidx-espresso-core-v340 = { module = "androidx.test.espresso:espresso-core", version.ref = "androidxEspressoCore" }
+androidx-espresso-core-v361 = { module = "androidx.test.espresso:espresso-core", version.ref = "androidxEspressoCoreVersion" }
+androidx-espresso-intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "androidxEspressoCore" }
+androidx-junit-v112 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
+androidx-junit-v113 = { module = "androidx.test.ext:junit", version.ref = "androidxJunitVersion" }
+androidx-junit-v121 = { module = "androidx.test.ext:junit", version.ref = "androidxTestExtJunit" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
+androidx-room-testing = { module = "androidx.room:room-testing", version.ref = "roomRuntime" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "core" }
@@ -45,6 +71,7 @@ dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = 
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
+hamcrest-library = { module = "org.hamcrest:hamcrest-library", version.ref = "hamcrestLibrary" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
@@ -55,11 +82,18 @@ kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-t
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 mockk-agent = { module = "io.mockk:mockk-agent", version.ref = "mockkAgent" }
 mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkAndroid" }
 mockk-v11311 = { module = "io.mockk:mockk", version.ref = "mockkVersion" }
+mockwebserver = { module = "com.squareup.okhttp3:mockwebserver", version.ref = "mockwebserver" }
+powermock-api-mockito3 = { module = "org.powermock:powermock-api-mockito3", version.ref = "powermockApiMockito3" }
+powermock-module-junit4 = { module = "org.powermock:powermock-module-junit4", version.ref = "powermockModuleJunit4" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+retrofit-mock = { module = "com.squareup.retrofit2:retrofit-mock", version.ref = "retrofit" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
 youtube-android-player = { module = "com.google.android.youtube:youtube-android-player", version.ref = "youtubeAndroidPlayer" }
 androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
@@ -68,6 +102,8 @@ firebase-auth-ktx = { group = "com.google.firebase", name = "firebase-auth-ktx",
 firebase-firestore-ktx = { group = "com.google.firebase", name = "firebase-firestore-ktx", version.ref = "firebaseFirestoreKtx" }
 androidx-ui-desktop = { group = "androidx.compose.ui", name = "ui-desktop", version.ref = "uiDesktop" }
 androidx-preference = { group = "androidx.preference", name = "preference", version.ref = "preference" }
+androidx-junit-ktx = { group = "androidx.test.ext", name = "junit-ktx", version.ref = "junitKtx" }
+testng = { group = "org.testng", name = "testng", version.ref = "testng" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
