--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,8 @@ coreTesting = "2.2.0"
 coreVersion = "1.6.1"
 dagger = "2.28.3"
 daggerCompiler = "2.x"
+daggerCompilerVersion = "2.40"
+daggerVersion = "2.40"
 espressoCoreVersion = "3.3.0"
 firebaseBom = "33.1.1"
 glide = "4.12.0"
@@ -36,6 +38,7 @@ powermockApiMockito3 = "2.0.9"
 powermockModuleJunit4 = "2.0.9"
 retrofit = "2.9.0"
 robolectric = "4.5.1"
+robolectricVersion = "4.9"
 roomRuntime = "2.6.1"
 youtubeAndroidPlayer = "10.0.5"
 annotation = "1.6.0"
@@ -68,6 +71,8 @@ converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref
 core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "core" }
 dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
 dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerCompiler" }
+dagger-compiler-v240 = { module = "com.google.dagger:dagger-compiler", version.ref = "daggerCompilerVersion" }
+dagger-v240 = { module = "com.google.dagger:dagger", version.ref = "daggerVersion" }
 firebase-analytics = { module = "com.google.firebase:firebase-analytics" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
@@ -94,6 +99,7 @@ powermock-module-junit4 = { module = "org.powermock:powermock-module-junit4", ve
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-mock = { module = "com.squareup.retrofit2:retrofit-mock", version.ref = "retrofit" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+robolectric-v49 = { module = "org.robolectric:robolectric", version.ref = "robolectricVersion" }
 youtube-android-player = { module = "com.google.android.youtube:youtube-android-player", version.ref = "youtubeAndroidPlayer" }
 androidx-annotation = { group = "androidx.annotation", name = "annotation", version.ref = "annotation" }
 androidx-lifecycle-livedata-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-ktx", version.ref = "lifecycleLivedataKtx" }
